--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </p>
   ABE<input type='checkbox' id='anotherbigexpansion'><br>
   <button onclick="Proceed()">All done!</button><br>
-  I do not own any assets that are here. These assets belong to Czech Games Edition. Support CGE by buying their games & apps!
+  This is a fan made project. I do not own any assets that are here. These assets belong to Czech Games Edition. If you want to suggest some changes, please DO NOT message CGE. Create an issue at <a href='https://github.com/transportowiec96/TruckerTracker'>the github repo</a> in order to do that. Support CGE by buying their games & apps!
 </div>
 <div id='statsboard'>
 hello
